@@ -32,6 +32,8 @@
           (http://www.packetfence.org/mantis/view.php?id=625)
         web admin GUI: fixed proxies configuration help
           (http://www.packetfence.org/mantis/view.php?id=626)
+        fixed handling of proxies section in configuration file
+          (http://www.packetfence.org/mantis/view.php?id=627)
 
 1.8.1
         authorized @ as first symbol in password
